Update project configuration and documentation
- Rename package from 'xlsx-diff-ts' to 'xlsx-diff-typescript' and update version to 1.0.0
- Enhance README.md with installation instructions for npm, yarn, and pnpm
- Add new files to .npmignore to exclude unnecessary files from npm package
- Remove package-lock.json as part of project cleanup
- Update keywords in package.json to include 'myers-diff', 'workbook', and 'spreadsheet'
- Add repository and bugs information in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xlsx-diff-ts",
-  "version": "0.1.0",
-  "description": "TypeScript library for comparing differences between two XLSX files",
+  "name": "xlsx-diff-typescript",
+  "version": "1.0.0",
+  "description": "TypeScript library for comparing differences between two XLSX files using Myers diff algorithm",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -12,7 +12,17 @@
     "example:original": "cd . && ts-node examples/example.ts",
     "prepare": "npm run build"
   },
-  "keywords": ["excel", "xlsx", "diff", "compare", "typescript"],
+  "keywords": [
+    "excel",
+    "xlsx",
+    "diff",
+    "compare",
+    "typescript",
+    "myers-diff",
+    "workbook",
+    "spreadsheet"
+  ],
+  "author": "vulh <vule.dev@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "xlsx": "^0.18.5"
@@ -26,10 +36,19 @@
     "ts-jest": "^29.0.0"
   },
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "README.md",
+    "CLAUDE.md"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/vulh1209/xlsx-diff-typescript"
+    "url": "git+https://github.com/vulh1209/xlsx-diff-typescript.git"
+  },
+  "homepage": "https://github.com/vulh1209/xlsx-diff-typescript#readme",
+  "bugs": {
+    "url": "https://github.com/vulh1209/xlsx-diff-typescript/issues"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
